# trakstar

./: CMakeLists.txt  README.md
cmake/: FindTrakStarSDK.cmake
src/: CMakeLists.txt  main.cpp  trakstar.cpp  trakstar.h
